# flutterust

./: Makefile.toml
ios/Runner.xcodeproj/: project.pbxproj
native/adder-ffi/: Cargo.toml
native/analysis/: Cargo.toml
native/analysis-ffi/: Cargo.toml
native/analysis/src/: lib.rs
native/runtime-ffi/: Cargo.toml  build.rs
native/runtime-ffi/src/: lib.rs
native/scrap/: Cargo.toml
native/scrap-ffi/: Cargo.toml  binding.h
native/scrap-ffi/src/: lib.rs
